Take exchange transaction snapshots only from current exchange period, distinct by latest reporting date on exchange transaction entity