@@ -9,9 +9,11 @@ import ee.tuleva.onboarding.analytics.transaction.exchange.ExchangeTransactionFi
 import ee.tuleva.onboarding.analytics.transaction.exchange.ExchangeTransactionRepository;
 import ee.tuleva.onboarding.time.ClockHolder;
 import ee.tuleva.onboarding.time.TestClockHolder;
+import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -34,12 +36,16 @@ class ExchangeTransactionSnapshotServiceTest {
 
   private OffsetDateTime fixedOffsetTime;
   private OffsetDateTime recordCreationTime;
+  private LocalDate today;
+  private LocalDate yesterday;
 
   @BeforeEach
   void setUp() {
     ClockHolder.setClock(TestClockHolder.clock);
     fixedOffsetTime = OffsetDateTime.now(ClockHolder.clock());
     recordCreationTime = fixedOffsetTime;
+    today = LocalDate.now(ClockHolder.clock());
+    yesterday = today.minusDays(1);
   }
 
   @AfterEach
@@ -48,12 +54,22 @@ class ExchangeTransactionSnapshotServiceTest {
   }
 
   @Test
-  void takeSnapshot_createsSnapshotsFromCurrentTransactions_forWeeklyJobType() {
+  void takeSnapshot_createsSnapshotsOnlyForLatestReportingDate_forWeeklyJobType() {
     // given
-    ExchangeTransaction tx1 = ExchangeTransactionFixture.exampleTransaction();
-    ExchangeTransaction tx2 = ExchangeTransactionFixture.anotherExampleTransaction();
-    List<ExchangeTransaction> currentTransactions = List.of(tx1, tx2);
-    when(currentTransactionRepository.findAll()).thenReturn(currentTransactions);
+    ExchangeTransaction tx1Latest =
+        ExchangeTransactionFixture.exampleTransactionBuilder().reportingDate(today).build();
+    ExchangeTransaction tx2Latest =
+        ExchangeTransactionFixture.anotherExampleTransactionBuilder().reportingDate(today).build();
+    ExchangeTransaction txOld =
+        ExchangeTransactionFixture.exampleTransactionBuilder()
+            .code("OLD_CODE")
+            .reportingDate(yesterday)
+            .build();
+
+    when(currentTransactionRepository.findTopByOrderByReportingDateDesc())
+        .thenReturn(Optional.of(tx1Latest));
+    when(currentTransactionRepository.findByReportingDate(today))
+        .thenReturn(List.of(tx1Latest, tx2Latest));
 
     // when
     snapshotService.takeSnapshot("WEEKLY");
@@ -68,28 +84,22 @@ class ExchangeTransactionSnapshotServiceTest {
             snapshot -> {
               assertThat(snapshot.getSnapshotTakenAt()).isEqualTo(fixedOffsetTime);
               assertThat(snapshot.getCreatedAt()).isEqualTo(recordCreationTime);
+              assertThat(snapshot.getReportingDate()).isEqualTo(today);
             });
 
-    ExchangeTransactionSnapshot snapshot1 =
-        savedSnapshots.stream().filter(s -> s.getCode().equals(tx1.getCode())).findFirst().get();
-    ExchangeTransactionSnapshot snapshot2 =
-        savedSnapshots.stream().filter(s -> s.getCode().equals(tx2.getCode())).findFirst().get();
-
-    assertThat(snapshot1.getSecurityFrom()).isEqualTo(tx1.getSecurityFrom());
-    assertThat(snapshot1.getSourceDateCreated()).isEqualTo(tx1.getDateCreated());
-    assertThat(snapshot1.getPercentage()).isEqualTo(tx1.getPercentage());
-
-    assertThat(snapshot2.getSecurityFrom()).isEqualTo(tx2.getSecurityFrom());
-    assertThat(snapshot2.getSourceDateCreated()).isEqualTo(tx2.getDateCreated());
-    assertThat(snapshot2.getPercentage()).isEqualTo(tx2.getPercentage());
+    assertThat(savedSnapshots.stream().map(ExchangeTransactionSnapshot::getCode))
+        .containsExactlyInAnyOrder(tx1Latest.getCode(), tx2Latest.getCode());
   }
 
   @Test
-  void takeSnapshot_createsSnapshotsFromCurrentTransactions_forMonthlyJobType() {
+  void takeSnapshot_createsSnapshotsOnlyForLatestReportingDate_forMonthlyJobType() {
     // given
-    ExchangeTransaction tx1 = ExchangeTransactionFixture.exampleTransaction();
-    List<ExchangeTransaction> currentTransactions = List.of(tx1);
-    when(currentTransactionRepository.findAll()).thenReturn(currentTransactions);
+    ExchangeTransaction tx1Latest =
+        ExchangeTransactionFixture.exampleTransactionBuilder().reportingDate(today).build();
+
+    when(currentTransactionRepository.findTopByOrderByReportingDateDesc())
+        .thenReturn(Optional.of(tx1Latest));
+    when(currentTransactionRepository.findByReportingDate(today)).thenReturn(List.of(tx1Latest));
 
     // when
     snapshotService.takeSnapshot("MONTHLY");
@@ -99,22 +109,66 @@ class ExchangeTransactionSnapshotServiceTest {
     List<ExchangeTransactionSnapshot> savedSnapshots = savedSnapshotsCaptor.getValue();
 
     assertThat(savedSnapshots).hasSize(1);
-    ExchangeTransactionSnapshot snapshot = savedSnapshots.get(0);
+    ExchangeTransactionSnapshot snapshot = savedSnapshots.getFirst();
     assertThat(snapshot.getSnapshotTakenAt()).isEqualTo(fixedOffsetTime);
     assertThat(snapshot.getCreatedAt()).isEqualTo(recordCreationTime);
-    assertThat(snapshot.getCode()).isEqualTo(tx1.getCode());
-    assertThat(snapshot.getSourceDateCreated()).isEqualTo(tx1.getDateCreated());
+    assertThat(snapshot.getReportingDate()).isEqualTo(today);
+    assertThat(snapshot.getCode()).isEqualTo(tx1Latest.getCode());
+    assertThat(snapshot.getSourceDateCreated()).isEqualTo(tx1Latest.getDateCreated());
   }
 
   @Test
   void takeSnapshot_doesNothingWhenNoCurrentTransactionsExist() {
     // given
-    when(currentTransactionRepository.findAll()).thenReturn(Collections.emptyList());
+    when(currentTransactionRepository.findTopByOrderByReportingDateDesc())
+        .thenReturn(Optional.empty());
 
     // when
     snapshotService.takeSnapshot("ANY_JOB_TYPE");
 
     // then
+    verify(currentTransactionRepository, never()).findByReportingDate(any());
     verify(snapshotRepository, never()).saveAll(any());
+  }
+
+  @Test
+  void takeSnapshot_doesNothingWhenNoTransactionsFoundForLatestDate() {
+    // given
+    ExchangeTransaction txWithLatestDate =
+        ExchangeTransactionFixture.exampleTransactionBuilder().reportingDate(today).build();
+    when(currentTransactionRepository.findTopByOrderByReportingDateDesc())
+        .thenReturn(Optional.of(txWithLatestDate));
+    when(currentTransactionRepository.findByReportingDate(today))
+        .thenReturn(Collections.emptyList());
+
+    // when
+    snapshotService.takeSnapshot("NO_TRANSACTIONS_FOR_LATEST_DATE_JOB");
+
+    // then
+    verify(snapshotRepository, never()).saveAll(any());
+  }
+
+  @Test
+  void takeSnapshot_whenAllTransactionsHaveSameReportingDate() {
+    // given
+    ExchangeTransaction tx1 =
+        ExchangeTransactionFixture.exampleTransactionBuilder().reportingDate(today).build();
+    ExchangeTransaction tx2 =
+        ExchangeTransactionFixture.anotherExampleTransactionBuilder().reportingDate(today).build();
+
+    when(currentTransactionRepository.findTopByOrderByReportingDateDesc())
+        .thenReturn(Optional.of(tx1));
+    when(currentTransactionRepository.findByReportingDate(today)).thenReturn(List.of(tx1, tx2));
+
+    // when
+    snapshotService.takeSnapshot("SAME_DATE_JOB");
+
+    // then
+    verify(snapshotRepository).saveAll(savedSnapshotsCaptor.capture());
+    List<ExchangeTransactionSnapshot> savedSnapshots = savedSnapshotsCaptor.getValue();
+
+    assertThat(savedSnapshots).hasSize(2);
+    assertThat(savedSnapshots.stream().map(ExchangeTransactionSnapshot::getCode))
+        .containsExactlyInAnyOrder(tx1.getCode(), tx2.getCode());
   }
 }
